--- a/release_notes/0.1.md
+++ b/release_notes/0.1.md
@@ -1,3 +1,7 @@
+---
+title: DataSpread 0.1
+---
+
 #DataSpread 0.1#
 ###*Released on Dec 14, 2016.*###
 [Check it now](http://kite.cs.illinois.edu:8080)
